--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>June 28, 2023</summary>
+                    Added IDs 00444, 00445.<br>
+                    Updated ID 00265.
+                </details>
+                <details>
                     <summary>June 21, 2023</summary>
                     Added ID 00443.
                 </details>
