--- a/GFL/index.html
+++ b/GFL/index.html
@@ -39,6 +39,7 @@
                     <a href="./changelog">Change Logs</a>
                     <!-- glossary -->
                     <!-- acquisition index -->
+                    <!-- item acquisition -->
                 </div>
 
                 <div id="event"></div>
