--- a/test.html
+++ b/test.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include.js"></script>
-
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
         
         <!-- Setup theme-color -->
 
@@ -18,20 +15,130 @@
 
         <!-- Setup Google Analytics -->
 
-        <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
-
         <title>Testing...</title>
     </head>
 
-    <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Live Test Page"></include>
+    <style>
+        div:is([id^="x"], [id^="y"]) {
+            border: green 1px double;
+        }
 
+        /* #region y0 - pointer */
+        @media (pointer: none) {
+            #y0::after {
+                content: "pointer: none" ;
+            }
+        }
+
+        @media (pointer: coarse) {
+            #y0::after {
+                content: "pointer: coarse" ;
+            }
+        }
+
+        @media (pointer: fine) {
+            #y0::after {
+                content: "pointer: fine" ;
+            }
+        }
+        /* #endregion */
+
+        /* #region y1 - any-pointer */
+        @media (any-pointer: none) {
+            #y1::after {
+                content: "any-pointer: none" ;
+            }
+        }
+
+        @media (any-pointer: coarse) {
+            #y1::after {
+                content: "any-pointer: coarse" ;
+            }
+        }
+
+        @media (any-pointer: fine) {
+            #y1::after {
+                content: "any-pointer: fine" ;
+            }
+        }
+        /* #endregion */
+
+        /* #region y2 - hover */
+        @media (hover: hover) {
+            #y2::after {
+                content: "hover: hover";
+            }
+        }
+
+        @media (hover: none) {
+            #y2::after {
+                content: "hover: none";
+            }
+        }
+        /* #endregion */
+
+        /* #region y3 - any-hover */
+        @media (any-hover: hover) {
+            #y3::after {
+                content: "any-hover: hover";
+            }
+        }
+
+        @media (any-hover: none) {
+            #y3::after {
+                content: "any-hover: none";
+            }
+        }
+        /* #endregion */
+
+        /* #region y4 - -moz-touch-enabled */
+        #y4::after {
+                content: "-moz-touch-enabled: unsupported";
+            }
+
+        @media (-moz-touch-enabled: 0) {
+            #y4::after {
+                content: "-moz-touch-enabled: 0";
+            }
+        }
+
+        @media (-moz-touch-enabled: 1) {
+            #y4::after {
+                content: "-moz-touch-enabled: 1";
+            }
+        }
+        /* #endregion */
+    </style>
+
+    <body>
         <div class="container">
             <section id="main_content">
+                <h1>Javascript</h1>
+                <div id="x0"></div>
+                <div id="x1"></div>
+                <div id="x2"></div>
+                <div id="x3"></div>
+                <div id="x4"></div>
+                <div id="x5"></div>
+                <div id="x6"></div>
+                <div id="x7"></div>
+                <div id="x8"></div>
+                <div id="x9"></div>
+                <h1>CSS</h1>
+                <div id="y0"></div>
+                <div id="y1"></div>
+                <div id="y2"></div>
+                <div id="y3"></div>
+                <div id="y4"></div>
+                <div id="y5"></div>
+                <div id="y6"></div>
+                <div id="y7"></div>
+                <div id="y8"></div>
+                <div id="y9"></div>
+                <br>
+                <div id="user-agent"></div>
             </section>
         </div>
-
-        <include src="/univasset/scripts/copyright/copyleft.html" game="asdf" company="lmao"></include>
 
         <script type="module">
             /* Working
@@ -52,6 +159,48 @@
             const ex = document.createElement('span');
             ex.textContent = 'jkl;'
             span.appendChild(ex); */
+            function userAgentMatch() {
+                return !!navigator.userAgent.match(/Mobi|Android|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile|/gi).filter(Boolean).length
+            }
+
+            function detectMobileBrowser() {
+                const a = navigator.userAgent || navigator.vendor || window.opera;
+                const b = /(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino|android|ipad|playbook|silk/gi;
+                const c = /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/gi;
+                return !!(a.match(b) || a.substr(0, 4).match(c))?.filter(Boolean).length;
+            }
+
+            function createTouchEvent() {
+                try{
+                    document.createEvent("TouchEvent");
+                    return true;
+                }
+                catch(e) {
+                    console.warn(e);
+                    return false;
+                }
+            }
+
+            function detectStorage() {
+                if (sessionStorage.desktop)     return false;
+                else if (localStorage.mobile)   return true;
+                else                            return null;
+            }
+
+            //hash["touch"]
+
+            document.querySelector("#x0").textContent = `navigator.userAgentData.mobile: ${navigator.userAgentData.mobile}`;
+            document.querySelector("#x1").textContent = `!!navigator.maxTouchPoints: ${!!navigator.maxTouchPoints}`;
+            document.querySelector("#x2").textContent = `"ontouchstart" in window: ${"ontouchstart" in window}`;
+            document.querySelector("#x3").textContent = `"ontouchstart" in document.documentElement: ${"ontouchstart" in document.documentElement}`;
+            document.querySelector("#x4").textContent = `userAgentMatch(): ${userAgentMatch()}`;
+            document.querySelector("#x5").textContent = `detectMobileBrowser(): ${detectMobileBrowser()}`;
+            document.querySelector("#x6").textContent = `createTouchEvent(): ${createTouchEvent()}`;
+            document.querySelector("#x7").textContent = `detectStorage(): ${detectStorage()}`;
+            document.querySelector("#x8").textContent = `window.DocumentTouch: ${window.DocumentTouch}`;
+            document.querySelector("#x9").textContent = ``;
+
+            document.querySelector("#user-agent").textContent = navigator.userAgent;
         </script>
     </body>
 </html>
