--- a/PNC/units.html
+++ b/PNC/units.html
@@ -32,8 +32,20 @@
                 <div id="button"></div>
                 
                 <div id="stats">
-                    <div></div>
-                    <div id="classes"></div>
+                    <div class="table"></div>
+                    <div id="classes">
+                        <!-- Guard -->
+                        <!-- Sniper -->
+                        <!-- Warrior -->
+                        <!-- Specialist -->
+                        <!-- Medic -->
+                    </div>
+                    <div id="bonus">
+                        <!-- Arma -->
+                        <!-- Specialty -->
+                        <!-- Intimacy -->
+                        <!-- No Algorithm, too volatile -->
+                    </div>
                     <p>All units at Lv.70 and 5★. Arma stats at Lv.30.</p>
                     <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu wiki</a> and <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                     <p>Default stats for all units:</p>
@@ -49,7 +61,7 @@
                 </div>
 
                 <div id="data">
-                    <div></div>
+                    <div class="table"></div>
                 </div>
             </section>
         </div>
