--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -23,6 +23,17 @@
         <title>GFL Changelogs | Random Scraps</title>
     </head>
 
+    <style>
+        details {
+            --indent: 1rem;
+            padding-left: var(--indent);
+        }
+
+        summary {
+            margin-left: calc(-1 * var(--indent));
+        }
+    </style>
+
     <body>
         <include src="/univasset/scripts/pageheader/header.html" 0="For those who want to reminisce on the has-beens"></include>
 
