--- a/GFL/index.html
+++ b/GFL/index.html
@@ -47,6 +47,7 @@
                 <div id="coalition"></div>
                 <div id="skin-banner"></div>
                 <div id="mini-event"></div>
+                <div id="extra"></div>
             </section>
         </div>
     </body>
