--- a/PNC/units.html
+++ b/PNC/units.html
@@ -46,7 +46,7 @@
                         <!-- Intimacy -->
                         <!-- No Algorithm, too volatile -->
                     </div>
-                    <p>All units at Lv.70 and 5★. Arma stats at Lv.30.</p>
+                    <p>All units at Lv.70 and 5★. Arma stats at Lv.30. Intimacy at Lv.15.</p>
                     <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu wiki</a> and <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                     <p>Default stats for all units:</p>
                     <div id="common">
