--- a/PNC/units.html
+++ b/PNC/units.html
@@ -34,11 +34,11 @@
                 <div id="stats">
                     <div class="table"></div>
                     <div id="classes">
-                        <!-- Guard -->
-                        <!-- Sniper -->
-                        <!-- Warrior -->
-                        <!-- Specialist -->
-                        <!-- Medic -->
+                        <label><input type="checkbox" value="Guard" checked>Guard</label>
+                        <label><input type="checkbox" value="Sniper" checked>Sniper</label>
+                        <label><input type="checkbox" value="Warrior" checked>Warrior</label>
+                        <label><input type="checkbox" value="Specialist" checked>Specialist</label>
+                        <label><input type="checkbox" value="Medic" checked>Medic</label>
                     </div>
                     <div id="bonus">
                         <!-- Arma -->
@@ -46,18 +46,8 @@
                         <!-- Intimacy -->
                         <!-- No Algorithm, too volatile -->
                     </div>
-                    <p>All units at Lv.70 and 5★. Arma stats at Lv.30. Intimacy at Lv.15.</p>
+                    <p>All units at Lv.70 and 5★.<!-- Arma stats at Lv.30. Intimacy at Lv.15.--></p>
                     <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu wiki</a> and <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
-                    <p>Default stats for all units:</p>
-                    <div id="common">
-                        <span>Crit Damage</span>        <span>50%</span>
-                        <span>Skill Haste</span>        <span>0%</span>
-                        <span>Debuff RES</span>         <span>0</span>
-                        <span>Backlash</span>           <span>0%</span>
-                        <span>Damage Boost</span>       <span>0%</span>
-                        <span>Injury Mitigation</span>  <span>0%</span>
-                        <span>Healing Effect</span>     <span>0%</span>
-                    </div>
                 </div>
 
                 <div id="data">
