--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>July 05, 2023</summary>
+                    Updated IDs 00052, 00097.
+                </details>
+                <details>
                     <summary>June 28, 2023</summary>
                     Added IDs 00444, 00445.<br>
                     Updated ID 00265.
