--- a/GFL/index.html
+++ b/GFL/index.html
@@ -40,6 +40,7 @@
                     <!-- glossary -->
                     <!-- acquisition index -->
                     <!-- item acquisition -->
+                    <!-- skill quirks -->
                 </div>
 
                 <div id="event"></div>
