--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -41,7 +41,8 @@
             <section id="main_content">
                 <details>
                     <summary>July 05, 2023</summary>
-                    Updated IDs 00052, 00097.
+                    Updated IDs 00052, 00097, 00024, 00265.<br>
+                    Changed IDs 00420, 00057.
                 </details>
                 <details>
                     <summary>June 28, 2023</summary>
