--- a/GFL/index.html
+++ b/GFL/index.html
@@ -7,8 +7,7 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="./index.css">
         
         <!-- Setup theme-color -->
 
