--- a/PNC/units.html
+++ b/PNC/units.html
@@ -34,11 +34,12 @@
                 <div id="stats">
                     <div class="table"></div>
                     <div id="classes">
-                        <label><input type="checkbox" value="Guard" checked>Guard</label>
-                        <label><input type="checkbox" value="Sniper" checked>Sniper</label>
-                        <label><input type="checkbox" value="Warrior" checked>Warrior</label>
-                        <label><input type="checkbox" value="Specialist" checked>Specialist</label>
-                        <label><input type="checkbox" value="Medic" checked>Medic</label>
+                        <div>Classes</div>
+                        <label><input type="checkbox" value="Guard" checked><img src="./assets/images/classes/GuardON.png" /></label>
+                        <label><input type="checkbox" value="Sniper" checked><img src="./assets/images/classes/SniperON.png" /></label>
+                        <label><input type="checkbox" value="Warrior" checked><img src="./assets/images/classes/WarriorON.png" /></label>
+                        <label><input type="checkbox" value="Specialist" checked><img src="./assets/images/classes/SpecialistON.png" /></label>
+                        <label><input type="checkbox" value="Medic" checked><img src="./assets/images/classes/MedicON.png" /></label>
                     </div>
                     <div id="bonus">
                         <!-- Arma -->
