--- a/PNC/units.html
+++ b/PNC/units.html
@@ -34,7 +34,7 @@
                 <div id="stats">
                     <div class="table"></div>
                     <div id="classes">
-                        <div>Classes</div>
+                        <div>Class</div>
                         <label><input type="checkbox" value="Guard" checked><img src="./assets/images/classes/GuardON.png" /></label>
                         <label><input type="checkbox" value="Sniper" checked><img src="./assets/images/classes/SniperON.png" /></label>
                         <label><input type="checkbox" value="Warrior" checked><img src="./assets/images/classes/WarriorON.png" /></label>
@@ -42,6 +42,7 @@
                         <label><input type="checkbox" value="Medic" checked><img src="./assets/images/classes/MedicON.png" /></label>
                     </div>
                     <div id="bonus">
+                        <div>Bonus</div>
                         <!-- Arma -->
                         <!-- Specialty -->
                         <!-- Intimacy -->
