--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>July 12, 2023</summary>
+                    Added IDs 00446, 00447, 00448, 00449.<br>
+                    Updated IDs 00174, 00061, 00398.
+                </details>
+                <details>
                     <summary>July 05, 2023</summary>
                     Updated IDs 00052, 00097, 00024, 00265.<br>
                     Changed IDs 00420, 00057.
