--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -3,9 +3,9 @@
     <head>
         <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module">
-            import {gdocDropdown} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
+            import {gdocDropdown} from '../univasset/scripts/htmlgenerator/htmlgenerator.js';
 
-            gdocDropdown(document.querySelector('#main_content div'),
+            gdocDropdown(document.querySelector("#main_content div"),
                 ["iana's Unit Rating & Teambuilding Spreadsheet", 'https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o'],
                 ["Character Attribute Values and In Game Formulas", "https://docs.google.com/document/d/1HHEBOWzqvyPCggI2SasIA0vYQtCh-dOXgsW2o7n74r0"],
                 ['Project Neural Cloud EN Tier List', 'https://docs.google.com/spreadsheets/d/1oNBX0zZdaNsGYwxA6cxvh58X6nvUSlcaKf9lTmjF6Yg'],
@@ -15,6 +15,7 @@
                 ["u/Zugon's PNC Item Rates", "https://docs.google.com/spreadsheets/d/1guDb_49x6g7I84Na2SP5BAB5SMFXubR41r0dhXHyGZQ"],
                 ['PNC Algorithm Sheet', 'https://docs.google.com/spreadsheets/d/1qP8rHMCwBqgxBdnf-qEVZRo3yXY2f4Ohju7GRmu7lNw'],
                 ["Neural Cloud Gifts", "https://docs.google.com/spreadsheets/d/1vohWGNxRO0kXSBxAGlVBezleV2YgxnCHY2yE_4scdTc"],
+                ["Less Intensive LUG", "https://docs.google.com/spreadsheets/d/1iqwy_37pHdbbxrM6rcCqcgTz174sRO4OZ_VvHPwgiwM"],
                 ["Lozzy Tier List", "https://docs.google.com/spreadsheets/d/1e_fEucLAZj8zi8ohELL2G2Q4ddZ_vvmGJqH87jQ2pwM"],
                 ['Algorithms', 'https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU'],
             )
