--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    Updated IDs 00200, 00206.
+                </details>
+                <details>
                     <summary>July 12, 2023</summary>
                     Added IDs 00446, 00447, 00448, 00449.<br>
                     Updated IDs 00174, 00061, 00398.
