--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,7 +40,7 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
+                    <summary>July 18, 2023</summary>
                     Updated IDs 00200, 00206.
                 </details>
                 <details>
