--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>July 19, 2023</summary>
+                    Added ID 00450.<br>
+                    Updated ID 00424.
+                </details>
+                <details>
                     <summary>July 18, 2023</summary>
                     Updated IDs 00200, 00206.
                 </details>
