--- a/PNC/units.html
+++ b/PNC/units.html
@@ -43,7 +43,7 @@
                     </div>
                     <div id="bonus">
                         <div>Bonus</div>
-                        <!-- Arma -->
+                        <label><input type="checkbox" value="Arma"/>Arma</label>
                         <!-- Specialty -->
                         <!-- Intimacy -->
                         <!-- No Algorithm, too volatile -->
@@ -66,12 +66,6 @@
         "reference" : {"" : ""},
         "fragments" : ["Fragment Search"],
         "event" : ""
-    },
-    {
-        "name" : "Hannah (X)",
-        "reference" : {"" : ""},
-        "fragments" : ["Fragment Search"],
-        "event" : "Critical Cascade"
     },
     {
         "name" : "Turing (X)",
