--- a/PNC/units.html
+++ b/PNC/units.html
@@ -29,8 +29,11 @@
 
         <div class="container">
             <section id="main_content">
-                <div id="button"></div>
-                
+                <div id="button">
+                    <label><input type="radio" name="tables" value="stat"/><h2>Stats</h2></label>
+                    <label><input type="radio" name="tables" value="data"/><h2>Others</h2></label>
+                </div>
+
                 <div id="stats">
                     <div class="table"></div>
                     <div id="classes">
@@ -43,7 +46,7 @@
                     </div>
                     <div id="bonus">
                         <div>Bonus</div>
-                        <label><input type="checkbox" value="Arma"/>Arma</label>
+                        <label><input type="checkbox" value="Arma"/>Arma Inscripta</label>
                         <!-- Specialty -->
                         <!-- Intimacy -->
                         <!-- No Algorithm, too volatile -->
