--- a/PNC/units.html
+++ b/PNC/units.html
@@ -30,8 +30,8 @@
         <div class="container">
             <section id="main_content">
                 <div id="button">
-                    <label><input type="radio" name="tables" value="stat"/><h2>Stats</h2></label>
-                    <label><input type="radio" name="tables" value="data"/><h2>Others</h2></label>
+                    <label><input type="radio" name="tables" value="stat" checked/><h2>Stats</h2></label>
+                    <label><input type="radio" name="tables" value="data" /><h2>Others</h2></label>
                 </div>
 
                 <div id="stats">
@@ -50,8 +50,9 @@
                         <!-- Specialty -->
                         <!-- Intimacy -->
                         <!-- No Algorithm, too volatile -->
+                        <!-- Fairies -->
                     </div>
-                    <p>All units at Lv.70 and 5★.<!-- Arma stats at Lv.30. Intimacy at Lv.15.--></p>
+                    <p>All units at Lv.70 and 5★. Arma stats at Lv.30.<!-- Intimacy at Lv.15.--></p>
                     <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu wiki</a> and <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 </div>
 
