--- a/PNC/units.html
+++ b/PNC/units.html
@@ -34,7 +34,7 @@
                     <label><input type="radio" name="tables" value="data" /><h2>Others</h2></label>
                 </div>
 
-                <div id="stats">
+                <div id="stat" class="tab-body">
                     <div class="table"></div>
                     <div id="classes">
                         <div>Class</div>
@@ -56,7 +56,7 @@
                     <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu wiki</a> and <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 </div>
 
-                <div id="data">
+                <div id="data" class="tab-body">
                     <div class="table"></div>
                 </div>
             </section>
