--- a/GFL/index.html
+++ b/GFL/index.html
@@ -32,6 +32,7 @@
                 <div id="links">
                     <a href="./faqs">Frequently Asked Questions</a>
                     <a href="./starter">New Player Guide</a>
+                    <a href="./returner">Returning Player Guide</a>
                     <a href="./docs" class="tooltip">Compilations<span class="tooltiptext">Skins, MODs, Furnitures, SPEQs</span></a>
                     <a href="./mainpage">Topics Repository</a>
                     <!--a href="./calc">Calculators</a-->
