--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -27,6 +27,10 @@
         a[id] {
             text-decoration: none;
         }
+
+        table {
+            max-width: 100%;
+        }
     </style>
 
     <body>
@@ -75,35 +79,52 @@
                 <p>The only "P2W" is Protocol Assimilation, especially concerning Ringleaders, though it's more of pay to catch-up than anything. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool during end game.</p>
 
                 <a href="#difficulty" id="difficulty"><h1>How is the difficulty in this game?</h1></a>
-                <dl>
-                    <dt>Early game</dt>
-                    <dd>Simple auto-battle</dd>
-                    <dd>Any team is fine</dd>
-                    <dd>Kill enemies, capture command posts</dd>
-                    <dd>Low resources and income, using MGs not recommended</dd>
-                    <dd>Building facilities and core units is high priority</dd>
-
-                    <dt>Mid game</dt>
-                    <dd>Knowledge of class types and simple kiting</dd>
-                    <dd>Proper team formation required</dd>
-                    <dd>Objective completion varies</dd>
-                    <dd>Stable resource income</dd>
-                    <dd>Raising fairies (stat buffs) and HOCs (off-map supports)</dd>
-
-                    <dt>Late game</dt>
-                    <dd>Advanced kiting, target resets, enemy attack delaying</dd>
-                    <dd>Specialized compositions focused on skill synergy</dd>
-                    <dd>Map gimmicks</dd>
-                    <dd>Abundant resources, mostly gets drained on production rate-up</dd>
-                    <dd>Raising specialist dolls (casually if preferred)</dd>
-
-                    <dt>End game</dt>
-                    <dd>Ranking mald with kiting, crit i-frames</dd>
-                    <dd>As long as it works</dd>
-                    <dd>Map control and objectives</dd>
-                    <dd>Resources dwindling by indiscriminate deployment</dd>
-                    <dd>Using duplicates is useful</dd>
-                </dl>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Stage</th>
+                            <th>Gameplay</th>
+                            <th>Teambuilding</th>
+                            <th>Objectives</th>
+                            <th>Resources</th>
+                            <th>Priorities</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Early game</td>
+                            <td>Simple auto-battle</td>
+                            <td>Any team is fine, using friend echelons adviced</td>
+                            <td>Kill enemies, capture command posts</td>
+                            <td>Low resources and income, using MGs not recommended</td>
+                            <td>Building facilities and core units</td>
+                        </tr>
+                        <tr>
+                            <td>Mid game</td>
+                            <td>Knowledge of class types and simple kiting</td>
+                            <td>Proper team formation required</td>
+                            <td>Objective completion varies</td>
+                            <td>Stable resource income</td>
+                            <td>Raising fairies (stat buffs) and HOCs (off-map supports)</td>
+                        </tr>
+                        <tr>
+                            <td>Late game</td>
+                            <td>Advanced kiting, target resets, enemy attack delaying</td>
+                            <td>Specialized compositions focused on skill synergy</td>
+                            <td>Map gimmicks</td>
+                            <td>Abundant resources, mostly gets drained on production rate-up</td>
+                            <td>Raising specialist dolls (casually if preferred)</td>
+                        </tr>
+                        <tr>
+                            <td>End game</td>
+                            <td>Ranking mald with kiting, crit i-frames</td>
+                            <td>As long as it works</td>
+                            <td>Map control and objectives</td>
+                            <td>Resources dwindling due to indiscriminate deployment</td>
+                            <td>Using duplicates is useful but not necessary</td>
+                        </tr>
+                    </tbody>
+                </table>
 
                 <a href="#phasing" id="phasing"><h1>I heard they made new games of the same series. Is GFL1 going to be phased out?</h1></a>
                 <p>Not anytime soon considering that 3.0 client (which is a big investment just to shutdown in a year) is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
