--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>July 28, 2023</summary>
+                    Added IDs 00451, 00452, 00453, 00454.<br>
+                    Updated IDs 00420, 00078, 00366, 00450.<br>
+                    Returning Player Guide page added.
+                </details>
+                <details>
                     <summary>July 19, 2023</summary>
                     Added ID 00450.<br>
                     Updated ID 00424.
