--- a/PNC/units.html
+++ b/PNC/units.html
@@ -38,11 +38,11 @@
                     <div class="table"></div>
                     <div id="classes">
                         <div>Class</div>
-                        <label><input type="checkbox" value="Guard" checked><img src="./assets/images/classes/GuardON.png" /></label>
-                        <label><input type="checkbox" value="Sniper" checked><img src="./assets/images/classes/SniperON.png" /></label>
-                        <label><input type="checkbox" value="Warrior" checked><img src="./assets/images/classes/WarriorON.png" /></label>
-                        <label><input type="checkbox" value="Specialist" checked><img src="./assets/images/classes/SpecialistON.png" /></label>
-                        <label><input type="checkbox" value="Medic" checked><img src="./assets/images/classes/MedicON.png" /></label>
+                        <label><input type="checkbox" value="Guard" checked><!--img src="./assets/images/classes/GuardON.png" /--></label>
+                        <label><input type="checkbox" value="Sniper" checked><!--img src="./assets/images/classes/SniperON.png" /--></label>
+                        <label><input type="checkbox" value="Warrior" checked><!--img src="./assets/images/classes/WarriorON.png" /--></label>
+                        <label><input type="checkbox" value="Specialist" checked><!--img src="./assets/images/classes/SpecialistON.png" /--></label>
+                        <label><input type="checkbox" value="Medic" checked><!--img src="./assets/images/classes/MedicON.png" /--></label>
                     </div>
                     <div id="bonus">
                         <div>Bonus</div>
