--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -6,8 +6,9 @@
             import {gdocDropdown} from '../univasset/scripts/htmlgenerator/htmlgenerator.js';
 
             gdocDropdown(document.querySelector("#main_content div"),
-                ["iana's Unit Rating & Teambuilding Spreadsheet", 'https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o'],
                 ["Character Attribute Values and In Game Formulas", "https://docs.google.com/document/d/1HHEBOWzqvyPCggI2SasIA0vYQtCh-dOXgsW2o7n74r0"],
+                ["iana's Unit Rating & Teambuilding Spreadsheet", 'https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o'],
+                ["Lizzy Amaranth's Matrix Guide (LAM Guide)", "https://docs.google.com/spreadsheets/d/1wlKPot-Gi1MM6OGAO7ivzSiA8Tdq081OqCqeL2E6DU8"],
                 ['Project Neural Cloud EN Tier List', 'https://docs.google.com/spreadsheets/d/1oNBX0zZdaNsGYwxA6cxvh58X6nvUSlcaKf9lTmjF6Yg'],
                 ['PNC Algo Mainstat Viability List', 'https://docs.google.com/spreadsheets/d/1DSK4d94RdRCV_ji7NXC0Klyf7v_dUkIY9n9qW9y2UeQ'],
                 ['PNC Neural Cloud Projections', 'https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU'],
