--- a/PNC/units.html
+++ b/PNC/units.html
@@ -38,21 +38,21 @@
                     <div class="table"></div>
                     <div id="classes">
                         <div>Class</div>
-                        <label><input type="checkbox" value="Guard" checked></label>
-                        <label><input type="checkbox" value="Sniper" checked></label>
-                        <label><input type="checkbox" value="Warrior" checked></label>
-                        <label><input type="checkbox" value="Specialist" checked></label>
-                        <label><input type="checkbox" value="Medic" checked></label>
+                        <label><input type="checkbox" value="Guard" checked /></label>
+                        <label><input type="checkbox" value="Sniper" checked /></label>
+                        <label><input type="checkbox" value="Warrior" checked /></label>
+                        <label><input type="checkbox" value="Specialist" checked /></label>
+                        <label><input type="checkbox" value="Medic" checked /></label>
                     </div>
                     <div id="bonus">
                         <div>Bonus</div>
-                        <label><input type="checkbox" value="Arma"/>Arma Inscripta</label>
-                        <!-- Specialty -->
-                        <!-- Intimacy -->
+                        <label><input type="checkbox" value="Arma" />Arma Inscripta</label>
+                        <label><input type="checkbox" value="Bond" disabled/>Intimacy</label>
+                        <label><input type="checkbox" value="Spec" disabled/>Special Training</label>
                         <!-- No Algorithm, too volatile -->
                         <!-- Fairies -->
                     </div>
-                    <p>All units at Lv.70 and 5★. Arma stats at Lv.30.<!-- Intimacy at Lv.15.--></p>
+                    <p>All units at Lv.70 and 5★. Arma stats at Lv.30.<!-- Intimacy at Lv.15. Specialty at Lv.???. --></p>
                     <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu wiki</a> and <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 </div>
 
@@ -70,12 +70,6 @@
         "reference" : {"" : ""},
         "fragments" : ["Fragment Search"],
         "event" : ""
-    },
-    {
-        "name" : "Turing (X)",
-        "reference" : {"Alan Turing" : "https://en.wikipedia.org/wiki/Alan_Turing"},
-        "fragments" : ["Fragment Search"],
-        "event" : "Critical Cascade"
     },
     {
         "name" : "Dupin (X)",
