--- a/PNC/units.html
+++ b/PNC/units.html
@@ -48,12 +48,12 @@
                         <div>Bonus</div>
                         <label><input type="checkbox" value="Arma" />Arma Inscripta</label>
                         <label><input type="checkbox" value="Bond" disabled/>Intimacy</label>
-                        <label><input type="checkbox" value="Spec" disabled/>Special Training</label>
+                        <label><input type="checkbox" value="Spec" disabled/>Specialty Training</label>
                         <!-- No Algorithm, too volatile -->
                         <!-- Fairies -->
                     </div>
                     <p>All units at Lv.70 and 5★. Arma stats at Lv.30.<!-- Intimacy at Lv.15. Specialty at Lv.???. --></p>
-                    <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu wiki</a> and <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
+                    <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 </div>
 
                 <div id="data" class="tab-body">
