--- a/PNC/index.html
+++ b/PNC/index.html
@@ -30,6 +30,7 @@
             <section id="main_content">
                 <p><a href="./units">Unit Stats</a></p>
                 <p><a href="./googledocs">Guides</a></p>
+                <p><a href="https://neuralen.modoo.at/">NC Skin info</a></p>
             </section>
         </div>
     </body>
