--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>August 16, 2023</summary>
+                    Updated IDs 00327, 00265.
+                </details>
+                <details>
                     <summary>August 10, 2023</summary>
                     Added IDs 00456, 00457, 00458, 00459.<br>
                     Updated IDs 00420, 00024, 00265.
