--- a/PNC/units.html
+++ b/PNC/units.html
@@ -49,6 +49,7 @@
                         <label><input type="checkbox" value="Arma" />Arma Inscripta</label>
                         <label><input type="checkbox" value="Bond" disabled/>Intimacy</label>
                         <label><input type="checkbox" value="Spec" disabled/>Specialty Training</label>
+                        <!-- Potential Breakthrough bonus - always active -->
                         <!-- No Algorithm, too volatile -->
                         <!-- Fairies -->
                     </div>
@@ -133,12 +134,18 @@
     },
     {
         "name" : "Taisch",
-        "reference" : {"" : ""},
-        "fragments" : ["Fragment Search"]
+        "reference" : {"" : ""}
     },
     {
         "name" : "Luna",
-        "reference" : {"K5" : ""},
-        "fragments" : ["Fragment Search"]
+        "reference" : {"K5" : ""}
+    },
+    {
+        "name" : "Xinghuan",
+        "reference" : {"" : ""}
+    },
+    {
+        "name" : "Yuwang",
+        "reference" : {"" : ""}
     },
 ] -->
