--- a/PNC/units.html
+++ b/PNC/units.html
@@ -49,7 +49,7 @@
                         <label><input type="checkbox" value="Arma" />Arma Inscripta</label>
                         <label><input type="checkbox" value="Bond" disabled/>Intimacy</label>
                         <label><input type="checkbox" value="Spec" disabled/>Specialty Training</label>
-                        <!-- Potential Breakthrough bonus - always active -->
+                        <label><input type="checkbox" value="PotB" disabled/>Potential Breakthrough</label>
                         <!-- No Algorithm, too volatile -->
                         <!-- Fairies -->
                     </div>
@@ -66,12 +66,6 @@
 </html>
 
 <!-- [
-    {
-        "name" : "Zangyin (X)",
-        "reference" : {"" : ""},
-        "fragments" : ["Fragment Search"],
-        "event" : ""
-    },
     {
         "name" : "Dupin (X)",
         "reference" : {"C. Auguste Dupin" : "https://en.wikipedia.org/wiki/C._Auguste_Dupin"},
@@ -138,7 +132,7 @@
     },
     {
         "name" : "Luna",
-        "reference" : {"K5" : ""}
+        "reference" : {"K5" : "", "LoL Brand": ""}
     },
     {
         "name" : "Xinghuan",
