--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>August 24, 2023</summary>
+                    Updated IDs 00174, 00265.<br>
+                    BlackMarket tag added.<br>
+                    Changed some instances of ForwardBasecamp and Shop combinations to BlackMarket.
+                </details>
+                <details>
                     <summary>August 16, 2023</summary>
                     Updated IDs 00327, 00265.
                 </details>
