--- a/GFL/returner.html
+++ b/GFL/returner.html
@@ -30,7 +30,7 @@
     </style>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Returner Guide"></include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="Questions specific to returning players"></include>
 
         <div class="container">
             <section id="main_content">
