--- a/PNC/units.html
+++ b/PNC/units.html
@@ -50,7 +50,7 @@
                         <label><input type="checkbox" value="Bond" disabled/>Intimacy</label>
                         <label><input type="checkbox" value="Spec" disabled/>Specialty Training</label>
                         <label><input type="checkbox" value="PotB" disabled/>Potential Breakthrough</label>
-                        <!-- No Algorithm, too volatile -->
+                        <!-- No Algorithm (yet) -->
                         <!-- Fairies -->
                     </div>
                     <p>All units at Lv.70 and 5★. Arma stats at Lv.30.<!-- Intimacy at Lv.15. Specialty at Lv.???. --></p>
