--- a/PNC/units.html
+++ b/PNC/units.html
@@ -46,10 +46,10 @@
                     </div>
                     <div id="bonus">
                         <div>Bonus</div>
+                        <label><input type="checkbox" value="PotB" />Potential Breakthrough</label>
                         <label><input type="checkbox" value="Arma" />Arma Inscripta</label>
                         <label><input type="checkbox" value="Bond" disabled/>Intimacy</label>
                         <label><input type="checkbox" value="Spec" disabled/>Specialty Training</label>
-                        <label><input type="checkbox" value="PotB" disabled/>Potential Breakthrough</label>
                         <!-- No Algorithm (yet) -->
                         <!-- Fairies -->
                     </div>
