--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>September 06, 2023</summary>
+                    Added IDs 00460, 00461, 00128.<br>
+                    Updated ID 00062.
+                </details>
+                <details>
                     <summary>August 24, 2023</summary>
                     Updated IDs 00174, 00265.<br>
                     BlackMarket tag added.<br>
