--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    Updated ID 00129.
+                </details>
+                <details>
                     <summary>September 06, 2023</summary>
                     Added IDs 00460, 00461, 00128.<br>
                     Updated ID 00062.
