--- a/PNC/units.html
+++ b/PNC/units.html
@@ -29,7 +29,7 @@
 
         <div class="container">
             <section id="main_content">
-                <div id="button">
+                <div id="button" class="tab-button">
                     <label><input type="radio" name="tables" value="stat" checked/><h2>Stats</h2></label>
                     <label><input type="radio" name="tables" value="data" /><h2>Others</h2></label>
                 </div>
@@ -56,6 +56,22 @@
                     <p>All units at Lv.70 and 5★. Arma stats at Lv.30.<!-- Intimacy at Lv.15. Specialty at Lv.???. --></p>
                     <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 </div>
+                <dialog id="algo-modal">
+                    <div class="tab-button">
+                        <label><input type="radio" name="algorithms" value="Offense" checked/><h2>Offense</h2></label>
+                        <label><input type="radio" name="algorithms" value="Stability" /><h2>Stability</h2></label>        
+                        <label><input type="radio" name="algorithms" value="Special" /><h2>Special</h2></label>        
+                    </div>
+                    <div id="Offense" class="tab-body">
+                        <span>Offense</span>
+                    </div>
+                    <div id="Stability" class="tab-body">
+                        <span>Stability</span>
+                    </div>
+                    <div id="Special" class="tab-body">
+                        <span>Special</span>
+                    </div>
+                </dialog>
 
                 <div id="data" class="tab-body">
                     <div class="table"></div>
