--- a/PNC/units.html
+++ b/PNC/units.html
@@ -71,6 +71,7 @@
                     <div id="Special" class="tab-body">
                         <span>Special</span>
                     </div>
+                    <button type="button">Close</button>
                 </dialog>
 
                 <div id="data" class="tab-body">
