--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,8 +40,9 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
-                    Updated ID 00129.
+                    <summary>September 13, 2023</summary>
+                    Added IDs 00462, 00463, 00464.<br>
+                    Updated IDs 00129, 00067, 00460, 00445, 00265.
                 </details>
                 <details>
                     <summary>September 06, 2023</summary>
